{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 297,
  "lineage": "d76f859f-b207-a42a-9095-cdcbc6776465",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "cms-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-south-1:713024823233:loadbalancer/app/cms-load-balancer/50f69fc5d24c7fa5",
            "arn_suffix": "app/cms-load-balancer/50f69fc5d24c7fa5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cms-load-balancer-1425018045.eu-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-south-1:713024823233:loadbalancer/app/cms-load-balancer/50f69fc5d24c7fa5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cms-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-063b875f2ccf3e459"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f8245c5ab2140c2"
              },
              {
                "subnet_id": "subnet-072c8533ec4418443"
              }
            ],
            "subnets": [
              "subnet-02f8245c5ab2140c2",
              "subnet-072c8533ec4418443"
            ],
            "tags_all": {
              "CreatedBy": "Terraform"
            },
            "vpc_id": "vpc-09780ba8c450312ae",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3ULH7SSC9OV64"
          },
          "dependencies": [
            "aws_security_group.website-cms-lb",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-south-1:713024823233:listener/app/cms-load-balancer/50f69fc5d24c7fa5/474f0cb7331b06c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-south-1:713024823233:targetgroup/cms-target-group/3a817d65ff5363ad",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-1:713024823233:listener/app/cms-load-balancer/50f69fc5d24c7fa5/474f0cb7331b06c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-south-1:713024823233:loadbalancer/app/cms-load-balancer/50f69fc5d24c7fa5",
            "port": 1337,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CreatedBy": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.cms-load-balancer",
            "aws_alb_target_group.app",
            "aws_security_group.website-cms-lb",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-1:713024823233:targetgroup/cms-target-group/3a817d65ff5363ad",
            "arn_suffix": "targetgroup/cms-target-group/3a817d65ff5363ad",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-1:713024823233:targetgroup/cms-target-group/3a817d65ff5363ad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cms-target-group",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CreatedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "dependencies": [
            "aws_vpc.website-cms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "website-cms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:network-acl/acl-062d12d01116ebda1",
            "default_network_acl_id": "acl-062d12d01116ebda1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-062d12d01116ebda1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3389,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 3389
              }
            ],
            "owner_id": "713024823233",
            "subnet_ids": [
              "subnet-02a2a79aa682e0ec1",
              "subnet-02f8245c5ab2140c2",
              "subnet-072c8533ec4418443",
              "subnet-0d646dd008fb38b92"
            ],
            "tags": {
              "CostCenter": "sitovetrina"
            },
            "tags_all": {
              "CostCenter": "sitovetrina",
              "CreatedBy": "Terraform"
            },
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.website-cms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "website-cms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0522cc544db574051",
            "association_id": "eipassoc-02970627c2cddca96",
            "domain": "vpc",
            "id": "eipalloc-0522cc544db574051",
            "network_border_group": "eu-south-1",
            "network_interface": "eni-0570d5f80bfb58ac3",
            "private_dns": "ip-10-0-3-184.eu-south-1.compute.internal",
            "private_ip": "10.0.3.184",
            "public_dns": "ec2-18-102-182-201.eu-south-1.compute.amazonaws.com",
            "public_ip": "18.102.182.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "sitovetrina",
              "Name": "sitovetrina"
            },
            "tags_all": {
              "CostCenter": "sitovetrina",
              "CreatedBy": "Terraform",
              "Name": "sitovetrina"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.website-cms",
            "aws_vpc.website-cms"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0949bb11b0ab60985",
            "association_id": "eipassoc-031c85cb7f1a5705c",
            "domain": "vpc",
            "id": "eipalloc-0949bb11b0ab60985",
            "network_border_group": "eu-south-1",
            "network_interface": "eni-0f28783e1622497f9",
            "private_dns": "ip-10-0-4-21.eu-south-1.compute.internal",
            "private_ip": "10.0.4.21",
            "public_dns": "ec2-18-102-157-74.eu-south-1.compute.amazonaws.com",
            "public_ip": "18.102.157.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "sitovetrina",
              "Name": "sitovetrina"
            },
            "tags_all": {
              "CostCenter": "sitovetrina",
              "CreatedBy": "Terraform",
              "Name": "sitovetrina"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.website-cms",
            "aws_vpc.website-cms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "website-cms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:internet-gateway/igw-0027f09e69e614190",
            "id": "igw-0027f09e69e614190",
            "owner_id": "713024823233",
            "tags": {
              "CostCenter": "sitovetrina",
              "Name": "sitovetrina"
            },
            "tags_all": {
              "CostCenter": "sitovetrina",
              "CreatedBy": "Terraform",
              "Name": "sitovetrina"
            },
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "dependencies": [
            "aws_vpc.website-cms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0522cc544db574051",
            "association_id": "eipassoc-02970627c2cddca96",
            "connectivity_type": "public",
            "id": "nat-0474811059ee842dc",
            "network_interface_id": "eni-0570d5f80bfb58ac3",
            "private_ip": "10.0.3.184",
            "public_ip": "18.102.182.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-072c8533ec4418443",
            "tags_all": {
              "CreatedBy": "Terraform"
            }
          },
          "dependencies": [
            "aws_eip.website-cms",
            "aws_internet_gateway.website-cms",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0949bb11b0ab60985",
            "association_id": "eipassoc-031c85cb7f1a5705c",
            "connectivity_type": "public",
            "id": "nat-0bf1a90c170f3ab63",
            "network_interface_id": "eni-0f28783e1622497f9",
            "private_ip": "10.0.4.21",
            "public_ip": "18.102.157.74",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f8245c5ab2140c2",
            "tags_all": {
              "CreatedBy": "Terraform"
            }
          },
          "dependencies": [
            "aws_eip.website-cms",
            "aws_internet_gateway.website-cms",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "website-cms-private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:route-table/rtb-0a4a861c6b59f11c2",
            "id": "rtb-0a4a861c6b59f11c2",
            "owner_id": "713024823233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0474811059ee842dc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "sitovetrina",
              "Name": "sitovetrina"
            },
            "tags_all": {
              "CostCenter": "sitovetrina",
              "CreatedBy": "Terraform",
              "Name": "sitovetrina"
            },
            "timeouts": null,
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.website-cms",
            "aws_internet_gateway.website-cms",
            "aws_nat_gateway.gw",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:route-table/rtb-0638e4810fe6e7e63",
            "id": "rtb-0638e4810fe6e7e63",
            "owner_id": "713024823233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bf1a90c170f3ab63",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "sitovetrina",
              "Name": "sitovetrina"
            },
            "tags_all": {
              "CostCenter": "sitovetrina",
              "CreatedBy": "Terraform",
              "Name": "sitovetrina"
            },
            "timeouts": null,
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.website-cms",
            "aws_internet_gateway.website-cms",
            "aws_nat_gateway.gw",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "website-cms-public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:route-table/rtb-05c1697df5af63fd9",
            "id": "rtb-05c1697df5af63fd9",
            "owner_id": "713024823233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0027f09e69e614190",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "sitovetrina",
              "Name": "Public Subnet Route Table"
            },
            "tags_all": {
              "CostCenter": "sitovetrina",
              "CreatedBy": "Terraform",
              "Name": "Public Subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.website-cms",
            "aws_vpc.website-cms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "website-cms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059f2fc9c78f02786",
            "route_table_id": "rtb-05c1697df5af63fd9",
            "subnet_id": "subnet-072c8533ec4418443"
          },
          "dependencies": [
            "aws_internet_gateway.website-cms",
            "aws_route_table.website-cms-public_subnet",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099a240cf503745f9",
            "route_table_id": "rtb-05c1697df5af63fd9",
            "subnet_id": "subnet-02f8245c5ab2140c2"
          },
          "dependencies": [
            "aws_internet_gateway.website-cms",
            "aws_route_table.website-cms-public_subnet",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "website-cms-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f57aa23ca34097e",
            "route_table_id": "rtb-0a4a861c6b59f11c2",
            "subnet_id": "subnet-02a2a79aa682e0ec1"
          },
          "dependencies": [
            "aws_eip.website-cms",
            "aws_internet_gateway.website-cms",
            "aws_nat_gateway.gw",
            "aws_route_table.website-cms-private_subnet",
            "aws_subnet.website-cms-private",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1648719d4bf4046",
            "route_table_id": "rtb-0638e4810fe6e7e63",
            "subnet_id": "subnet-0d646dd008fb38b92"
          },
          "dependencies": [
            "aws_eip.website-cms",
            "aws_internet_gateway.website-cms",
            "aws_nat_gateway.gw",
            "aws_route_table.website-cms-private_subnet",
            "aws_subnet.website-cms-private",
            "aws_subnet.website-cms-public",
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:security-group/sg-0e68b0d47677bb79a",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e68b0d47677bb79a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-063b875f2ccf3e459"
                ],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "cms-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "713024823233",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "CreatedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.website-cms-lb",
            "aws_vpc.website-cms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "website-cms-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:security-group/sg-078ba8659025d4739",
            "description": "Ingress - RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078ba8659025d4739",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e68b0d47677bb79a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "website-cms-database",
            "name_prefix": "",
            "owner_id": "713024823233",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "website-cms"
            },
            "tags_all": {
              "CostCenter": "website-cms",
              "CreatedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.website-cms-lb",
            "aws_vpc.website-cms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "website-cms-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:security-group/sg-063b875f2ccf3e459",
            "description": "Ingress - Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063b875f2ccf3e459",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "website-cms-lb",
            "name_prefix": "",
            "owner_id": "713024823233",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "website-cms"
            },
            "tags_all": {
              "CostCenter": "website-cms",
              "CreatedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.website-cms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "website-cms-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:subnet/subnet-02a2a79aa682e0ec1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1a",
            "availability_zone_id": "eus1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a2a79aa682e0ec1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713024823233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "private",
              "CostCenter": "website-cms",
              "Name": "Private Subnet 01"
            },
            "tags_all": {
              "Access": "private",
              "CostCenter": "website-cms",
              "CreatedBy": "Terraform",
              "Name": "Private Subnet 01"
            },
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "dependencies": [
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:subnet/subnet-0d646dd008fb38b92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1b",
            "availability_zone_id": "eus1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d646dd008fb38b92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713024823233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "private",
              "CostCenter": "website-cms",
              "Name": "Private Subnet 02"
            },
            "tags_all": {
              "Access": "private",
              "CostCenter": "website-cms",
              "CreatedBy": "Terraform",
              "Name": "Private Subnet 02"
            },
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "dependencies": [
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "website-cms-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:subnet/subnet-072c8533ec4418443",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1a",
            "availability_zone_id": "eus1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072c8533ec4418443",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713024823233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "public",
              "CostCenter": "website-cms",
              "Name": "Public Subnet 01"
            },
            "tags_all": {
              "Access": "public",
              "CostCenter": "website-cms",
              "CreatedBy": "Terraform",
              "Name": "Public Subnet 01"
            },
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "dependencies": [
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:subnet/subnet-02f8245c5ab2140c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1b",
            "availability_zone_id": "eus1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f8245c5ab2140c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "713024823233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "public",
              "CostCenter": "website-cms",
              "Name": "Public Subnet 02"
            },
            "tags_all": {
              "Access": "public",
              "CostCenter": "website-cms",
              "CreatedBy": "Terraform",
              "Name": "Public Subnet 02"
            },
            "vpc_id": "vpc-09780ba8c450312ae"
          },
          "dependencies": [
            "aws_vpc.website-cms",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "website-cms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:713024823233:vpc/vpc-09780ba8c450312ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-062d12d01116ebda1",
            "default_route_table_id": "rtb-07166e3316c1566cc",
            "default_security_group_id": "sg-0ce9ba2f63ead6a7f",
            "dhcp_options_id": "dopt-03b4bc4d19717cfaf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09780ba8c450312ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07166e3316c1566cc",
            "owner_id": "713024823233",
            "tags": {
              "CostCenter": "sitovetrina",
              "Name": "sitovetrina"
            },
            "tags_all": {
              "CostCenter": "sitovetrina",
              "CreatedBy": "Terraform",
              "Name": "sitovetrina"
            }
          }
        }
      ]
    }
  ]
}